August 8 2024 Listing Update

--- a/index.html
+++ b/index.html
@@ -167,6 +167,30 @@
                 </div>
             </div>
 
+            <!-- Valve Index Controller Charging Desk Stand -->
+            <div class="col-lg-3 col-md-4 col-sm-6">
+                <div class="product product-rounded">
+                    <a class="product-link" href="https://www.etsy.com/listing/1693334556/valve-index-controller-charging-desk">
+                        <div class="product-img-container">
+                            <div class="product-img">
+                                <div class="product-hover">
+                                </div>
+                                <!-- Card Image -->
+                                <img class="item-image"
+                                    src="https://i.etsystatic.com/21771279/r/il/0a4e2a/5977860159/il_794xN.5977860159_knc9.jpg">
+                                <!--<img class="item-image" src="img/logos/Logo.png">-->
+                            </div>
+                        </div>
+                        <div class="product-caption">
+                            <!-- Card Title -->
+                            <h4 class="product-caption-title">Valve Index Controller Charging Desk Stand</h4>
+                            <!-- Card Subheading -->
+                            <p class="product-caption-description">Effortless Charging and Storage</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
             <!-- Wall Mounted Skateboard Graphic Display Stand -->
             <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="product product-rounded">
@@ -242,6 +266,78 @@
                 </div>
             </div>
 
+            <!-- Dual Xbox Controller Desk Stand -->
+            <div class="col-lg-3 col-md-4 col-sm-6">
+                <div class="product product-rounded">
+                    <a class="product-link" href="https://www.etsy.com/listing/1168317425/dual-xbox-controller-desk-stand-works">
+                        <div class="product-img-container">
+                            <div class="product-img">
+                                <div class="product-hover">
+                                </div>
+                                <!-- Card Image -->
+                                <img class="item-image"
+                                    src="https://i.etsystatic.com/21771279/r/il/d6ea67/3639345692/il_794xN.3639345692_559p.jpg">
+                                <!--<img class="item-image" src="img/logos/Logo.png">-->
+                            </div>
+                        </div>
+                        <div class="product-caption">
+                            <!-- Card Title -->
+                            <h4 class="product-caption-title">Dual Xbox Controller Desk Stand</h4>
+                            <!-- Card Subheading -->
+                            <p class="product-caption-description">Elevate Your Xbox Controller Game</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Sur Ron Battery Caps for Aftermarket Batteries -->
+            <div class="col-lg-3 col-md-4 col-sm-6">
+                <div class="product product-rounded">
+                    <a class="product-link" href="https://www.etsy.com/listing/1113894835/sur-ron-battery-caps-for-aftermarket">
+                        <div class="product-img-container">
+                            <div class="product-img">
+                                <div class="product-hover">
+                                </div>
+                                <!-- Card Image -->
+                                <img class="item-image"
+                                    src="https://i.etsystatic.com/21771279/r/il/57c9e8/3441856626/il_fullxfull.3441856626_c4yu.jpg">
+                                <!--<img class="item-image" src="img/logos/Logo.png">-->
+                            </div>
+                        </div>
+                        <div class="product-caption">
+                            <!-- Card Title -->
+                            <h4 class="product-caption-title">Caps for Aftermarket Sur Ron Batteries</h4>
+                            <!-- Card Subheading -->
+                            <p class="product-caption-description">Easy and Simple Protection</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Sur Ron Battery Cap for Stock Batteries -->
+            <div class="col-lg-3 col-md-4 col-sm-6">
+                <div class="product product-rounded">
+                    <a class="product-link" href="https://www.etsy.com/listing/1099987110/sur-ron-battery-cap-for-stock-batteries">
+                        <div class="product-img-container">
+                            <div class="product-img">
+                                <div class="product-hover">
+                                </div>
+                                <!-- Card Image -->
+                                <img class="item-image"
+                                    src="https://i.etsystatic.com/21771279/r/il/72d937/3441933220/il_fullxfull.3441933220_imga.jpg">
+                                <!--<img class="item-image" src="img/logos/Logo.png">-->
+                            </div>
+                        </div>
+                        <div class="product-caption">
+                            <!-- Card Title -->
+                            <h4 class="product-caption-title">Cap for Stock Sur Ron Battery</h4>
+                            <!-- Card Subheading -->
+                            <p class="product-caption-description">Easy and Simple Protection</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
         </div>
 
     </div>
@@ -285,16 +381,15 @@
         <div class="container">
             <div class="row text-center d-flex align-items-center">
                 <div class="container col-xl-6 col-lg-6 col-md-10 col-sm-8 col-10 order-2 pad-above">
-                    <img src="img/banners/Gradient_Banner.jpg" data-src="/img/about/Ender_3_Printers.jpg"
-                        data-srcset="/img/about/Ender_3_Printers.jpg" class="lazy img-fluid">
+                    <img src="img/banners/Gradient_Banner.jpg" data-src="/img/about/printers.jpg"
+                        data-srcset="/img/about/printers.jpg" class="lazy img-fluid">
                 </div>
 
                 <div class="container col-xl-6 col-lg-6 col-md-10 col-sm-10 col-10 order-1" style="text-align: left;">
                     <br>
                     <h2 class="section-heading text-center ud-red">Ursua Designs Capabilities</h2>
 
-                    <p class="">Ursua Designs has six 3D printers that have been modified and tuned to
-                        produce excellent prints. The largest print volume we support is 15 inches x 15 inches x 12 inches.</p>
+                    <p class="">Ursua Designs has a Bambu Labs P1S 3D printer that produces excellent prints. The largest print volume we support is 10 inches x 10 inches x 10 inches.</p>
 
                     <p class="">Our prices are determined by a number of factors, including the size of the print, the
                         type of material used, printing time, the level of detail required, as well as how much material
@@ -302,9 +397,9 @@
 
                     <h5 class="ud-red">Our Materials and Colors</h5>
                     <ul>
-                        <li>PLA (Our Standard Plastic):&nbsp;Black, White, Red, Green, Blue, Yellow, Orange</li>
-                        <li>TPU (Stretchy and Flexible):&nbsp;Black, White</li>
-                        <li>PETG (More Durable and Resistant):&nbsp;Black, White</li>
+                        <li>PLA (Our Standard Plastic):&nbsp;Black, White, Red, Blue</li>
+                        <li>TPU (Stretchy and Flexible):&nbsp;Black</li>
+                        <!--<li>PETG (More Durable and Resistant):&nbsp;Black, White</li>-->
                     </ul>
                 </div>
 
@@ -337,7 +432,7 @@
             <div class="row align-items-center">
                 <div class="col-md-4">
                     <span class="copyright text-light">Copyright &copy;
-                        2021 Ursua Designs
+                        <script type="text/javascript">var year = new Date(); document.write(year.getFullYear());</script> Ursua Designs
                     </span>
                 </div>
                 <div class="col-md-4">
