Printers Img Fix

--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@
         <div class="container">
             <div class="row text-center d-flex align-items-center">
                 <div class="container col-xl-6 col-lg-6 col-md-10 col-sm-8 col-10 order-2 pad-above">
-                    <img src="img/banners/Gradient_Banner.jpg" data-src="/img/about/printers.jpg"
-                        data-srcset="/img/about/printers.jpg" class="lazy img-fluid">
+                    <img src="img/banners/Gradient_Banner.jpg" data-src="img/about/Printers.jpg"
+                        data-srcset="img/about/Printers.jpg" class="lazy img-fluid">
                 </div>
 
                 <div class="container col-xl-6 col-lg-6 col-md-10 col-sm-10 col-10 order-1" style="text-align: left;">
