--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <meta charset="utf-8">
     <meta name="description" content="Ursua Designs offers 3D printing services alongside custom 3D printed products.">
-    <meta name="keywords" content="3D Printing,Virtual Reality Stand,VR Wall Mount,Oculus Quest Display,Valve Index Wall Charging Stand,Summerboard Bumpers">
+    <meta name="keywords" content="3D Printing,Virtual Reality Stand,VR Wall Mount,Oculus Quest Display,Valve Index Wall Charging Stand,Nintendo Switch Joycons and Accessories,Universal Controller Stands and Displays">
     <meta name="author" content="Jacob Ursua">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -241,26 +241,26 @@
                 </div>
             </div>
 
-            <!-- Summerboard Bumpers V2 Product Listing -->
+            <!-- Battery Mount for Antigravity ATX20-HD | 2015+ S550 Ford Mustang -->
             <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="product product-rounded">
                     <a class="product-link"
-                        href="https://www.etsy.com/listing/866735294/summerboard-deck-bumpers-v2-protection">
+                        href="https://www.etsy.com/listing/1856702834/battery-mount-for-antigravity-atx20-hd">
                         <div class="product-img-container">
                             <div class="product-img">
                                 <div class="product-hover">
                                 </div>
                                 <!-- Card Image -->
                                 <img class="item-image"
-                                    src="https://i.etsystatic.com/21771279/r/il/423e64/2623590985/il_794xN.2623590985_4jmb.jpg">
+                                    src="https://i.etsystatic.com/21771279/r/il/6aa6e7/6982779253/il_794xN.6982779253_a263.jpg">
                                 <!--<img class="item-image" src="img/logos/Logo.png">-->
                             </div>
                         </div>
                         <div class="product-caption">
                             <!-- Card Title -->
-                            <h4 class="product-caption-title">Summerboard Bumpers V2</h4>
+                            <h4 class="product-caption-title">Battery Mount for Antigravity ATX20-HD</h4>
                             <!-- Card Subheading -->
-                            <p class="product-caption-description">Revamped Summerboard Deck Protection</p>
+                            <p class="product-caption-description">Built for S550 Mustangs</p>
                         </div>
                     </a>
                 </div>
@@ -290,49 +290,73 @@
                 </div>
             </div>
 
-            <!-- Sur Ron Battery Caps for Aftermarket Batteries -->
+            <!-- Joy-Con Slim Storage Tower for Nintendo Switch - Holds and Displays Up To Four Joycons -->
             <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="product product-rounded">
-                    <a class="product-link" href="https://www.etsy.com/listing/1113894835/sur-ron-battery-caps-for-aftermarket">
+                    <a class="product-link" href="https://www.etsy.com/listing/1870552399/joy-con-slim-storage-tower-for-nintendo">
                         <div class="product-img-container">
                             <div class="product-img">
                                 <div class="product-hover">
                                 </div>
                                 <!-- Card Image -->
                                 <img class="item-image"
-                                    src="https://i.etsystatic.com/21771279/r/il/57c9e8/3441856626/il_fullxfull.3441856626_c4yu.jpg">
+                                    src="https://i.etsystatic.com/21771279/r/il/d8d726/6815230866/il_794xN.6815230866_7jah.jpg">
                                 <!--<img class="item-image" src="img/logos/Logo.png">-->
                             </div>
                         </div>
                         <div class="product-caption">
                             <!-- Card Title -->
-                            <h4 class="product-caption-title">Caps for Aftermarket Sur Ron Batteries</h4>
+                            <h4 class="product-caption-title">Joy-Con Slim Storage Tower for Nintendo Switch</h4>
                             <!-- Card Subheading -->
-                            <p class="product-caption-description">Easy and Simple Protection</p>
+                            <p class="product-caption-description">Displays Up To Four Joycons</p>
                         </div>
                     </a>
                 </div>
             </div>
 
-            <!-- Sur Ron Battery Cap for Stock Batteries -->
+            <!-- Joy-Con Angled Storage for Nintendo Switch - Holds and Displays Up To Eight Joycons -->
             <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="product product-rounded">
-                    <a class="product-link" href="https://www.etsy.com/listing/1099987110/sur-ron-battery-cap-for-stock-batteries">
+                    <a class="product-link" href="https://www.etsy.com/listing/4296080424/joy-con-angled-storage-for-nintendo">
                         <div class="product-img-container">
                             <div class="product-img">
                                 <div class="product-hover">
                                 </div>
                                 <!-- Card Image -->
                                 <img class="item-image"
-                                    src="https://i.etsystatic.com/21771279/r/il/72d937/3441933220/il_fullxfull.3441933220_imga.jpg">
+                                    src="https://i.etsystatic.com/21771279/r/il/75b5a2/6863116683/il_794xN.6863116683_1nez.jpg">
                                 <!--<img class="item-image" src="img/logos/Logo.png">-->
                             </div>
                         </div>
                         <div class="product-caption">
                             <!-- Card Title -->
-                            <h4 class="product-caption-title">Cap for Stock Sur Ron Battery</h4>
+                            <h4 class="product-caption-title">Joy-Con Angled Storage for Nintendo Switch</h4>
                             <!-- Card Subheading -->
-                            <p class="product-caption-description">Easy and Simple Protection</p>
+                            <p class="product-caption-description">Displays Up To Eight Joycons</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Dual Universal Controller Low Stand - Compact Desktop Controller Storage for Xbox One, Series X/S, PlayStation 4/5 , and More -->
+            <div class="col-lg-3 col-md-4 col-sm-6">
+                <div class="product product-rounded">
+                    <a class="product-link" href="https://www.etsy.com/listing/1870544773/dual-universal-controller-low-stand">
+                        <div class="product-img-container">
+                            <div class="product-img">
+                                <div class="product-hover">
+                                </div>
+                                <!-- Card Image -->
+                                <img class="item-image"
+                                    src="https://i.etsystatic.com/21771279/r/il/81ec09/6860713901/il_794xN.6860713901_fodk.jpg">
+                                <!--<img class="item-image" src="img/logos/Logo.png">-->
+                            </div>
+                        </div>
+                        <div class="product-caption">
+                            <!-- Card Title -->
+                            <h4 class="product-caption-title">Dual Universal Controller Low Stand</h4>
+                            <!-- Card Subheading -->
+                            <p class="product-caption-description">Compact Controller Storage</p>
                         </div>
                     </a>
                 </div>
@@ -445,6 +469,11 @@
                         <li class="list-inline-item">
                             <a href="https://www.facebook.com/UrsuaDesigns">
                                 <i class="fab fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.pinterest.com/ursuadesigns/">
+                                <i class="fab fa-pinterest"></i>
                             </a>
                         </li>
                         <li class="list-inline-item hidden">
