--- a/index.html
+++ b/index.html
@@ -216,26 +216,26 @@
                 </div>
             </div>
 
-            <!-- Wall Mounted VR Headset Stand Product Listing -->
+            <!-- Summerboard Bumpers V2 Product Listing -->
             <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="product product-rounded">
                     <a class="product-link"
-                        href="https://www.etsy.com/listing/807314605/vr-headset-stand-and-controller-wall">
+                        href="https://www.etsy.com/listing/866735294/summerboard-deck-bumpers-v2-protection">
                         <div class="product-img-container">
                             <div class="product-img">
                                 <div class="product-hover">
                                 </div>
                                 <!-- Card Image -->
                                 <img class="item-image"
-                                    src="https://i.etsystatic.com/21771279/r/il/1bd6cd/2931914692/il_794xN.2931914692_6498.jpg">
+                                    src="https://i.etsystatic.com/21771279/r/il/423e64/2623590985/il_794xN.2623590985_4jmb.jpg">
                                 <!--<img class="item-image" src="img/logos/Logo.png">-->
                             </div>
                         </div>
                         <div class="product-caption">
                             <!-- Card Title -->
-                            <h4 class="product-caption-title">Wall Mounted VR Headset Stand</h4>
+                            <h4 class="product-caption-title">Summerboard Bumpers V2</h4>
                             <!-- Card Subheading -->
-                            <p class="product-caption-description">Proudly Present Your Headset</p>
+                            <p class="product-caption-description">Revamped Summerboard Deck Protection</p>
                         </div>
                     </a>
                 </div>
@@ -261,6 +261,31 @@
                             <h4 class="product-caption-title">Battery Mount for Antigravity ATX20-HD</h4>
                             <!-- Card Subheading -->
                             <p class="product-caption-description">Built for S550 Mustangs</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Wall Mounted VR Headset Stand Product Listing -->
+            <div class="col-lg-3 col-md-4 col-sm-6">
+                <div class="product product-rounded">
+                    <a class="product-link"
+                        href="https://www.etsy.com/listing/807314605/vr-headset-stand-and-controller-wall">
+                        <div class="product-img-container">
+                            <div class="product-img">
+                                <div class="product-hover">
+                                </div>
+                                <!-- Card Image -->
+                                <img class="item-image"
+                                    src="https://i.etsystatic.com/21771279/r/il/1bd6cd/2931914692/il_794xN.2931914692_6498.jpg">
+                                <!--<img class="item-image" src="img/logos/Logo.png">-->
+                            </div>
+                        </div>
+                        <div class="product-caption">
+                            <!-- Card Title -->
+                            <h4 class="product-caption-title">Wall Mounted VR Headset Stand</h4>
+                            <!-- Card Subheading -->
+                            <p class="product-caption-description">Proudly Present Your Headset</p>
                         </div>
                     </a>
                 </div>
